--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "discord.js": "^14.24.0",
+    "dotenv": "^17.2.3",
     "node-cron": "^4.2.1"
   }
 }
