--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.24.0",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "node-cron": "^4.2.1"
   }
 }
